# SpaceParticleSimulator

./: CMakeLists.txt  brain.hpp  debughelp.hpp  gameterminal.hpp  go.sh  main  main 2  main 3  main.cpp  particle.hpp  preformance.hpp  readme.md  test  test.cpp  test.sh  test2.cpp
.github/: FUNDING.yml
Frameworks/: .SFML.framework.icloud
SFML/Frameworks/SFML.framework/Versions/2.5.1/Headers/: Audio.hpp  GpuPreference.hpp  Graphics.hpp  Main.hpp  Network.hpp  OpenGL.hpp  System.hpp  Window.hpp
SFML/Frameworks/SFML.framework/Versions/2.5.1/Headers/Audio/: AlResource.hpp  Export.hpp  InputSoundFile.hpp  Listener.hpp  Music.hpp  OutputSoundFile.hpp  Sound.hpp  SoundBuffer.hpp  SoundBufferRecorder.hpp  SoundFileFactory.hpp  SoundFileReader.hpp  SoundFileWriter.hpp  SoundRecorder.hpp  SoundSource.hpp  SoundStream.hpp
SFML/Frameworks/SFML.framework/Versions/2.5.1/Headers/Graphics/: BlendMode.hpp  CircleShape.hpp  Color.hpp  ConvexShape.hpp  Drawable.hpp  Export.hpp  Font.hpp  Glsl.hpp  Glyph.hpp  Image.hpp  Rect.hpp  RectangleShape.hpp  RenderStates.hpp  RenderTarget.hpp  RenderTexture.hpp  RenderWindow.hpp  Shader.hpp  Shape.hpp  Sprite.hpp  Text.hpp  Texture.hpp  Transform.hpp  Transformable.hpp  Vertex.hpp  VertexArray.hpp  VertexBuffer.hpp  View.hpp
SFML/Frameworks/SFML.framework/Versions/2.5.1/Headers/Network/: Export.hpp  Ftp.hpp  Http.hpp  IpAddress.hpp  Packet.hpp  Socket.hpp  SocketHandle.hpp  SocketSelector.hpp  (+3 more)
extlibs/: .OpenAL.framework.icloud  .freetype.framework.icloud  .vorbisenc.framework.icloud
test_code/: test_particals.cpp  test_threading.cpp
(+36 files in other folders)
